--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "jest": "^26.4.0",
     "lint-staged": "^10.2.11",
     "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
