--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^27.0.3",
+    "@types/mocha": "^9.0.0",
     "@types/node": "^14.0.27",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "eslint": "^7.6.0",
@@ -24,6 +26,8 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mocha": "^9.1.3",
+    "rimraf": "^3.0.2"
   }
 }
