docs: improved gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,31 @@
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+*.swp
+
+pids
+logs
+results
+tmp
+
+coverage
+
+.env
+
 node_modules
+bower_components
+
+.idea
+*.iml
+
+.DS_Store
+Thumbs.db
+
+dist/**/*
+
+package-lock.json
