--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "typescript-base",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/src/main/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc && node dist/src/main/server.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^27.0.3",
-    "@types/mocha": "^9.0.0",
     "@types/node": "^14.0.27",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "eslint": "^7.6.0",
