--- a/package.json
+++ b/package.json
@@ -4,30 +4,33 @@
   "description": "",
   "main": "dist/src/main/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node dist/src/main/server.js"
+    "test": "jest --passWithNoTests",
+    "start": "tsc && node dist/src/main/server.js",
+    "build": "rimraf dist && tsc -p tsconfig-build.json",
+    "build-docker": "tsc -p tsconfig-build.json"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^27.0.3",
-    "@types/node": "^14.0.27",
-    "@typescript-eslint/eslint-plugin": "^3.8.0",
-    "eslint": "^7.6.0",
-    "eslint-config-standard-with-typescript": "^18.0.2",
-    "eslint-plugin-import": "^2.22.0",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^14.14.6",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
+    "eslint": "^7.12.1",
+    "eslint-config-standard": "^16.0.1",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "git-commit-msg-linter": "^2.4.4",
-    "husky": "^4.2.5",
-    "jest": "^26.4.0",
-    "lint-staged": "^10.2.11",
-    "typescript": "^3.9.7"
+    "git-commit-msg-linter": "^3.0.0",
+    "husky": "^4.3.0",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.1",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^26.4.3",
+    "typescript": "^4.0.5"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "mocha": "^9.1.3",
-    "rimraf": "^3.0.2"
+    "express": "^4.17.1"
   }
 }
