--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,19 @@
 {
-  "extends": "standard-with-typescript",
+  "env": {
+      "browser": true,
+      "es2021": true,
+      "jest": true
+  },
+  "extends": [
+      "standard"
+  ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "./tsconfig.json"
+      "ecmaVersion": 12
+  },
+  "plugins": [
+      "@typescript-eslint"
+  ],
+  "rules": {
   }
 }
